--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1,16 +1,19 @@
-# This file is the entry point to configure your own services.
-# Files in the packages/ subdirectory configure your dependencies.
-
-# Put parameters here that don't need to change on each machine where the app is deployed
-# https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
 
 services:
-    # default configuration for services in *this* file
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
 
+    # Explicitly provide the session for SessionInterface
+    Symfony\Component\HttpFoundation\Session\SessionInterface: '@session.factory'
+
+    # Définition unique pour CartServices
+    App\Services\CartServices:
+        arguments:
+            $session: '@session' # Utilisez @session au lieu de @session.factory pour accéder à la session
+            $repoProduct: '@App\Repository\ProductRepository'
+    
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     App\:
@@ -20,9 +23,7 @@ services:
             - '../src/Entity/'
             - '../src/Kernel.php'
 
-    # add more service definitions when explicit configuration is needed
-    # please note that last definitions always *replace* previous ones
-
+    # Event subscriber definition
     App\EventSubscriber\DatabaseActivitySubscriber:
         tags:
             - name: 'doctrine.event_subscriber'
