--- a/composer.json
+++ b/composer.json
@@ -7,14 +7,16 @@
         "php": ">=8.1",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "amphp/http-client": "4.2.1",
         "cocur/slugify": "^4.6",
         "doctrine/dbal": "^3",
         "doctrine/doctrine-bundle": "^2.13",
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^3.2",
-        "easycorp/easyadmin-bundle": "^4.12",
+        "easycorp/easyadmin-bundle": "^4.20",
         "phpdocumentor/reflection-docblock": "^5.4",
         "phpstan/phpdoc-parser": "^1.32",
+        "stripe/stripe-php": "^16.6",
         "symfony/asset": "6.3.*",
         "symfony/asset-mapper": "6.3.*",
         "symfony/console": "6.3.*",
@@ -47,7 +49,7 @@
         "symfonycasts/verify-email-bundle": "^1.17",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/intl-extra": "^3.8",
-        "twig/twig": "^2.12|^3.0"
+        "twig/twig": "3.15"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.6",
