Mise en place de l'entité Contact

--- a/.env
+++ b/.env
@@ -38,4 +38,6 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 
 ###> symfony/mailer ###
 MAILER_DSN="smtp://9a9f478665224d:0a39d9ba625d34@sandbox.smtp.mailtrap.io:2525"
+# Looking to send emails in production? Check out our Email API/SMTP product!
+###MAILER_DSN="smtp://sandbox.smtp.mailtrap.io:2525"
 ###< symfony/mailer ###
