--- a/.env.dev
+++ b/.env.dev
@@ -15,7 +15,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=prod
+APP_ENV=dev
 APP_SECRET=0b04f4df0d480454d8294ff8d3c85fca
 ###< symfony/framework-bundle ###
 
