--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "phpdocumentor/reflection-docblock": "^5.4",
         "phpstan/phpdoc-parser": "^1.32",
         "stripe/stripe-php": "^16.6",
+        "symfony/apache-pack": "^1.0",
         "symfony/asset": "6.3.*",
         "symfony/asset-mapper": "6.3.*",
         "symfony/console": "6.3.*",
