--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -17,8 +17,13 @@ security:
             lazy: true
             provider: app_user_provider
             custom_authenticator: App\Security\AppCustomAuthenticator
+            entry_point: App\Security\AdminEntryPoint
+            form_login:
+                login_path: app_login
+                check_path: app_login
             logout:
                 path: app_logout
+                target: /
                 # where to redirect after logout
                 # target: app_any_route
 
@@ -37,9 +42,9 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
+         - { path: ^/admin, roles: ROLE_ADMIN }
          - { path: ^/account, roles: ROLE_USER }
-        # - { path: ^/checkout, roles: ROLE_USER }
+         - { path: ^/checkout, roles: ROLE_USER }
 
 when@test:
     security:
