--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,14 +5,18 @@ services:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
 
-    # Explicitly provide the session for SessionInterface
-    Symfony\Component\HttpFoundation\Session\SessionInterface: '@session.factory'
-
     # Définition unique pour CartServices
     App\Services\CartServices:
         arguments:
             $session: '@session' # Utilisez @session au lieu de @session.factory pour accéder à la session
             $repoProduct: '@App\Repository\ProductRepository'
+
+    # config/services.yaml
+    App\Security\AdminEntryPoint:
+        arguments:
+            $router: '@router'
+            $requestStack: '@request_stack'
+
     
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
